# ElasticSim

./: .gitignore  README.md  Untitled-1.nb
projects/: To implement.txt
projects/Try1/: CMakeLists (2).txt  ElasticGeometry_old.cpp
projects/Try1/src/: main.cpp
projects/Try2/: CMakeLists.txt  CMakeSettings.json  Tryé.sln  Tryé.vcxproj  Tryé.vcxproj.filters  main.cpp
projects/Try2/ConsoleApplication1/: ConsoleApplication1.sln
projects/Try2/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
projects/Try2/Tryé/x64/Debug/: vc143.idb
projects/Try2/Tryé/x64/Debug/Tryé.tlog/: CL.command.1.tlog  Tryé.lastbuildstate
projects/Try2/src/: main.cpp
projects/elastic_membrane/: CMakeLists.txt
projects/elastic_membrane/src/: ElasticGeometry.cpp  ElasticGeometry.h  main.cpp
projects/elastic_membrane/src/old/: ElasticGeometry_old.cpp
